projects/opencloud/local/nginx-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy
  namespace: opencloud
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31080   # optional; if omitted, a random port in 30000-32767 is assigned
    name: http
  - port: 443
    targetPort: 443
    nodePort: 31443
    name: https
  selector:
    app: nginx-proxy
